@@ -19,7 +19,7 @@ jobs:
         - --enable-debug --enable-aac --enable-msbc --enable-lc3-swb
         - --enable-debug --enable-mp3lame --enable-mpg123
         - --enable-faststream --enable-midi --enable-mp3lame
-        - --enable-aplay --enable-ofono --enable-upower
+        - --enable-aplay --enable-ofono --enable-opus --enable-upower
         - --enable-cli --enable-rfcomm --enable-manpages
         - --enable-aptx --enable-aptx-hd --with-libopenaptx
       fail-fast: false
@@ -123,6 +123,7 @@ jobs:
           --enable-mpg123 \
           --enable-msbc \
           --enable-ofono \
+          --enable-opus \
           --enable-upower \
           --enable-aplay \
           --enable-cli \
