@@ -56,6 +56,7 @@ jobs:
           --enable-mpg123 \
           --enable-msbc \
           --enable-ofono \
+          --enable-opus \
           --enable-upower \
           --enable-aplay \
           --enable-cli \
@@ -104,6 +105,7 @@ jobs:
           --enable-mpg123 \
           --enable-msbc \
           --enable-ofono \
+          --enable-opus \
           --enable-upower \
           --enable-aplay \
           --enable-cli \
