@@ -36,6 +36,7 @@ jobs:
           --enable-mpg123 \
           --enable-msbc \
           --enable-ofono \
+          --enable-opus \
           --enable-upower \
           --enable-aplay \
           --enable-cli \
