@@ -290,6 +290,11 @@ test_rfcomm_SOURCES += \
 	../src/sco-msbc.c
 endif
 
+if ENABLE_OPUS
+test_a2dp_SOURCES += ../src/a2dp-opus.c
+test_io_SOURCES += ../src/a2dp-opus.c
+endif
+
 AM_TESTS_ENVIRONMENT = \
 	export G_DEBUG=fatal-warnings;
 
@@ -311,6 +316,7 @@ AM_CFLAGS = \
 	@LIBUNWIND_CFLAGS@ \
 	@MP3LAME_CFLAGS@ \
 	@MPG123_CFLAGS@ \
+	@OPUS_CFLAGS@ \
 	@SBC_CFLAGS@ \
 	@SNDFILE_CFLAGS@ \
 	@SPANDSP_CFLAGS@
@@ -332,6 +338,7 @@ LDADD = \
 	@LIBUNWIND_LIBS@ \
 	@MP3LAME_LIBS@ \
 	@MPG123_LIBS@ \
+	@OPUS_LIBS@ \
 	@SBC_LIBS@ \
 	@SNDFILE_LIBS@ \
 	@SPANDSP_LIBS@
